[project]
name = "vulnhunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.5.3",
    "dotenv>=0.9.9",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.16",
    "langsmith>=0.7.33",
    "pandas>=3.0.2",
    "rich>=15.0.0",
]
